# fast-api-msr

./: README.md  alembic.init  main.py  pyproject.toml
alembic/versions/: 8bdfc7ce473d_.py  d6789a276b90_moving_is_active_to_user_table.py
api/: users.py
api/utils/: courses.py  users.py
db/: db_setup.py
db/models/: user.py
pydantic_schemas/: user.py
