[tool.poetry]
name = "fast-api-msr"
version = "0.1.0"
description = ""
authors = ["marcos <jmarcosuarez@gmail.com>"]
readme = "README.md"
packages = [{include = "fast_api_msr"}]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.22.0"
fastapi = "^0.95.1"
pydantic = "^1.10.7"
sqlalchemy = "^2.0.13"
psycopg2-binary = "^2.9.6"
sqlalchemy-utils = "^0.41.1"
alembic = "^1.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
